--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -995,6 +995,9 @@
               "label": "Subtext"
             }
           }
+        },
+        "newsletter": {
+          "name": "Newsletter"
         }
       },
       "settings": {
